# basic-python-udn

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: conf.py  index.md  referensi.md
docs/_static/: custom.css
docs/matplotlib/: dasar.md  index.md  jenis_plot.md  kustomisasi.md  subplots.md
docs/ml_dl/: index.md
docs/nlp/: index.md
docs/nlp/spacy/: preprocessing.md
docs/numpy/: array_dasar.md  broadcasting.md  index.md  indexing_slicing.md  operasi_matriks.md  random_dan_io.md
docs/pandas/: groupby_agg.md  index.md  io_data.md  merge_join.md  missing_values.md  seleksi_filter.md  series_dataframe.md
docs/pengantar/: index.md
docs/python/: error_handling.md  file_io.md  fungsi.md  index.md  kontrol_alur.md  modul_dan_paket.md  oop_ringkas.md  tipe_data.md
docs/pytorch/: autograd.md  dataloader.md  index.md  nn_module.md  saving_loading.md  tensor.md  training_loop.md
docs/scikit_learn/: evaluasi.md  index.md  model_dasar.md  preprocessing.md  workflow_ml.md
docs/setup/: index.md
docs/spacy/: dasar.md  index.md  tokenisasi_pos_ner.md
docs/transformers/: dasar.md  index.md
